Testing out new things with the wheel and css

--- a/index.html
+++ b/index.html
@@ -19,113 +19,43 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
   <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
-  <script src="js/main.js"></script>
+  <ul class="team" style="--member-count: 7">
+    <li style="--member-idx:1">
+      <img src="img/Goblin.jfif" alt="">
+      <span class="tooltip">GOBLIN</span>
+    </li>
+    <li style="--member-idx:2">
+      <img src="img/Wolf_cover3.jpg" alt="">
+      <span class="tooltip">WOLF</span>
+    </li>
+    <li style="--member-idx:3">
+      <img src="img/Cherry_Bomb_Tyler_the_Creator.png" alt="">
+      <span class="tooltip">CHERRY BOMB</span>
+    </li>
+    <li style="--member-idx:4">
+      <img src="img/Flower+Boy.jfif" alt="">
+      <span class="tooltip">FLOWER BOY</span>
+    </li>
+    <li style="--member-idx:5">
+      <img src="img/Igor.jpg" alt="">
+      <span class="tooltip">IGOR</span>
+    </li>
+    <li style="--member-idx:6">
+      <img src="img/CMIYGL.png" alt="">
+      <span class="tooltip">CMIYGL</span>
+    </li>
+    <li style="--member-idx:7">
+      <img src="img/Chromakopia.jpg" alt="">
+      <span class="tooltip">CHROMAKOPIA</span>
+    </li>
+  </ul>  
 </body>
-<ul class="wheel">
- 
-  <li class="img" data-title="Paris" style="--img: url(https://images.pexels.com/photos/1530259/pexels-photo-1530259.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor" text-anchor="middle" aria-hidden="true">
-        <textPath xlink:href="#circlePath" startOffset="20">Paris</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
-  
-  <li class="img" data-title="Dubai" style="--img: url(https://images.pexels.com/photos/6868159/pexels-photo-6868159.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor" text-anchor="middle" aria-hidden="true">
-        <textPath xlink:href="#circlePath" startOffset="20">Dubai</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
-  
-  <li class="img" data-title="Tokyo" style="--img: url(https://images.pexels.com/photos/26178948/pexels-photo-26178948/free-photo-of-a-city-at-dusk.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor" text-anchor="middle" aria-hidden="true">
-        <textPath xlink:href="#circlePath" startOffset="20">Tokyo</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
-
-  <li class="img" data-title="Delhi" style="--img: url(https://images.pexels.com/photos/1007427/pexels-photo-1007427.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor" text-anchor="middle" aria-hidden="true" >
-        <textPath xlink:href="#circlePath" startOffset="20">Delhi</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
-  <!-- 5 -->
-  <li class="img" data-title="Sydney" style="--img: url(https://images.pexels.com/photos/1878293/pexels-photo-1878293.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor" text-anchor="middle" aria-hidden="true" >
-        <textPath xlink:href="#circlePath" startOffset="20">Sydney</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
-
-  <!--6 -->
-  <li class="img" data-title="London" style="--img: url(https://images.pexels.com/photos/5209891/pexels-photo-5209891.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor"  text-anchor="middle" aria-hidden="true">
-        <textPath xlink:href="#circlePath" startOffset="20">London</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
- 
-  <li class="img" data-title="Rome" style="--img: url(https://images.pexels.com/photos/1701595/pexels-photo-1701595.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor"  text-anchor="middle" aria-hidden="true">
-        <textPath xlink:href="#circlePath" startOffset="20">Rome</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
-   
-  <li class="img" data-title="New York" style="--img: url(https://images.pexels.com/photos/64271/queen-of-liberty-statue-of-liberty-new-york-liberty-statue-64271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <div class="hoverable"></div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-    <g>
-      <text fill="currentColor" text-anchor="middle" aria-hidden="true">
-        <textPath xlink:href="#circlePath" startOffset="20">New York</textPath>
-      </text>
-    </g>
-  </svg>
-  </li>
-
-</ul>
-
-
-<!-- SVG template with dynamic text -->
-
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0">
-  <defs>
-    <path id="circlePath" d="M 50, 5 a 45,45 0 1,1 0,90 a 45,45 0 1,1 0,-90" />
-  </defs>
-</svg>
-</html>
