--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <link rel="stylesheet" href="css/main.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Metal+Mania&family=Modak&family=Montserrat:ital,wght@0,600;1,600&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,99,900;1,6..12,99,900&family=Rubik+Spray+Paint&family=Shrikhand&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -31,31 +31,32 @@
   <ul class="team" style="--member-count: 7">
     <li style="--member-idx:1">
       <img src="img/Goblin.jfif" alt="">
-      <span class="tooltip">GOBLIN</span>
+      <span class="tooltip" style="font-family: 'Shrikhand'; color: #a71d6a;">GOBLIN</span>
     </li>
     <li style="--member-idx:2">
       <img src="img/Wolf_cover3.jpg" alt="">
-      <span class="tooltip">WOLF</span>
+      <span class="tooltip" style="font-family: 'Montserrat'; color: #d2edc0;">WOLF</span>
     </li>
     <li style="--member-idx:3">
       <img src="img/Cherry_Bomb_Tyler_the_Creator.png" alt="">
-      <span class="tooltip">CHERRY BOMB</span>
+      <span class="tooltip" style="font-family: 'Knewave'; color: #dac054;">CHERRY BOMB</span>
     </li>
     <li style="--member-idx:4">
       <img src="img/Flower+Boy.jfif" alt="">
-      <span class="tooltip">FLOWER BOY</span>
+      <span class="tooltip" style="font-family: 'Modak'; color: #fb6c34;">FLOWER BOY</span>
     </li>
     <li style="--member-idx:5">
       <img src="img/Igor.jpg" alt="">
-      <span class="tooltip">IGOR</span>
+      <span class="tooltip" style="font-family: 'Metal Mania'; color: #f0adbf;">IGOR</span>
     </li>
     <li style="--member-idx:6">
       <img src="img/CMIYGL.png" alt="">
-      <span class="tooltip">CMIYGL</span>
+      <span class="tooltip" style="font-family: 'Nunito Sans'; color: #64938d;">CMIYGL</span>
     </li>
     <li style="--member-idx:7">
       <img src="img/Chromakopia.jpg" alt="">
-      <span class="tooltip">CHROMAKOPIA</span>
+      <span class="tooltip" style="font-family: 'Rubik Spray Paint'; color: #308d46;">CHROMAKOPIA</span>
     </li>
-  </ul>  
+  </ul>
+  
 </body>
